--- a/autopecas/app/views/autopecas/new.html.erb
+++ b/autopecas/app/views/autopecas/new.html.erb
@@ -1,3 +1,5 @@
-<h2 style="margin-left: 37%" class='control-label'>Cadastro de peça</h2>
-
-<%= render 'form' %>
+<%- model_class = Autopeca -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize %></h1>
+</div>
+<%= render :partial => 'form' %>
