Adicionado metodos para funcionamento do ajax

--- a/autopecas/app/views/autopecas/create.js.erb
+++ b/autopecas/app/views/autopecas/create.js.erb
@@ -1,5 +1,5 @@
 $(".message").html("<h1>Cadastrado com Sucesso !</h1>");
 
 setTimeout(function(){
-$(".message h1").remove;
+alert("Chamou o criate!");
 },3000);
