--- a/autopecas/app/views/autopecas/index.html.erb
+++ b/autopecas/app/views/autopecas/index.html.erb
@@ -2,15 +2,25 @@
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
 </div>
-<div>
-<%= form_tag(autopecas_path, :method => :get) do %>
-  <%= text_field_tag 'pesquisar', nil, placeholder: 'Nome do produto...'%>
-  <%= submit_tag "Pesquisar"%>
-<%end%>
+
+<div class="row">
+  <div class=".col-md-6">
+    <%= form_tag(autopecas_path, :method => :get) do %>
+      <%= text_field_tag 'pesquisar', nil, placeholder: 'Nome do produto...'%>
+      <%= submit_tag "Pesquisar"%>
+    <%end%>
+  </div>
+
+  <div class=".col-md-6">
+  <%= link_to t('.new', :default => t("helpers.links.new")),
+            new_autopeca_path,
+            :class => 'btn btn-primary ' %>
+  </div>
+</div>
 
 <br>
 <br>
-</div>
+
 <div id="table-peca">
 <table class=" table-striped table-custom">
   <thead>
@@ -49,7 +59,7 @@
         <td>
 
           <%= link_to t('.sell', :default => t("helpers.links.sell")),
-                      selling_path(autopeca), :class => 'btn btn-default btn-xs',remote: true, method: :put %>
+                      selling_path(autopeca), :data => {:confirm => 'Deseja confirmar venda?'}, :class => 'btn btn-default btn-xs',remote: true, method: :put %>
 
 
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
@@ -66,7 +76,3 @@
 
 </table>
 </div>
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_autopeca_path,
-            :class => 'btn btn-primary' %>
-            <br>
