Adicionando mask e query para peças que estão faltando

--- a/autopecas/app/views/autopecas/index.html.erb
+++ b/autopecas/app/views/autopecas/index.html.erb
@@ -3,20 +3,30 @@
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
 </div>
 
-<div class="row">
-  <div class=".col-md-6">
-    <%= form_tag(autopecas_path, :method => :get) do %>
-      <%= text_field_tag 'pesquisar', nil, placeholder: 'Nome do produto...'%>
-      <%= submit_tag "Pesquisar"%>
-    <%end%>
-  </div>
-
-  <div class=".col-md-6">
-  <%= link_to t('.new', :default => t("helpers.links.new")),
+<div class="container-fluid">
+  <div class="row">
+    <div class=".col-md-6">
+      <%= form_tag(autopecas_path, :method => :get) do %>
+        <%= text_field_tag 'pesquisar', nil, placeholder: 'Nome do produto...'%>
+        <%= submit_tag "Pesquisar"%>
+      <%end%>
+    </div>
+<br>
+    <div class=".col-xs-12 .col-sm-6 .col-md-8">
+    <%= link_to t('.new', :default => t("helpers.links.new")),
             new_autopeca_path,
             :class => 'btn btn-primary ' %>
+    </div>
+    <div class=".col-xs-6 .col-md-4">
+      <%= form_tag(autopecas_path, :method => :get) do %>
+        <%=hidden_field_tag "pecas" %>
+        <%=label_tag "Peças que estão em falta" %>
+        <%= submit_tag "Ver" , :class => 'btn btn-info' %>
+      <%end%>
+    </div>
   </div>
 </div>
+
 
 <br>
 <br>
@@ -59,7 +69,7 @@
         <td>
 
           <%= link_to t('.sell', :default => t("helpers.links.sell")),
-                      selling_path(autopeca), :data => {:confirm => 'Deseja confirmar venda?'}, :class => 'btn btn-default btn-xs',remote: true, method: :put %>
+                      selling_path(autopeca), :data => {:confirm => 'Deseja confirmar venda?'}, :class => 'btn btn-success btn-xs',remote: true, method: :put %>
 
 
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
@@ -70,6 +80,7 @@
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-xs btn-danger' %>
         </td>
+
       </tr>
     <% end %>
   </tbody>
