--- a/autopecas/app/views/autopecas/_form.html.erb
+++ b/autopecas/app/views/autopecas/_form.html.erb
@@ -1,3 +1,4 @@
+<%= javascript_include_tag "monetarynew" %>
 <%= form_for(@autopeca) do |f| %>
 
   <% if @autopeca.errors.any? %>
@@ -43,20 +44,22 @@
     </div>
     <%=f.error_span(:aplicacao) %>
   </div>
+
   <div class="form-group">
     <%= f.label :valor_compra, :class => 'control-label col-lg-2' %>
     <div class="col-lg-10">
-      <%= f.text_field :valor_compra, :class => 'form-control',:value => "R$ " %>
+      <%= f.text_field :valor_compra, :id => "maskmoneyCompra",:class => 'form-control', 'data-affixes-stay'=>'true', 'data-prefix'=>'R$ ', 'data-thousands'=>'.', 'data-decimal'=>',' %>
     </div>
     <%=f.error_span(:valor_compra) %>
   </div>
   <div class="form-group">
     <%= f.label :valor_venda, :class => 'control-label col-lg-2' %>
     <div class="col-lg-10">
-      <%= f.text_field :valor_venda, :class => 'form-control',:value => "R$ "  %>
+      <%= f.text_field :valor_venda, :id => "maskmoneyVenda",:class => 'form-control','data-affixes-stay'=>'true', 'data-prefix'=>'R$ ', 'data-thousands'=>'.', 'data-decimal'=>',' %>
     </div>
     <%=f.error_span(:valor_venda) %>
   </div>
+
   <div class="form-group">
     <%= f.label :codigo_peca, :class => 'control-label col-lg-2' %>
     <div class="col-lg-10">
